TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "138928997283056" [label="Start"];
  "138928997283056" -> "138928997278448";
  "138928997278448" [label="Code"];
  "138928997278448" -> "138928997281520";
  "138928997281520" [label="Function"];
  "138928997281520" -> "138928997274224";
  "138928997281520" -> "138928997278208";
  "138928997281520" -> "138928997277440";
  "138928997274224" [label="main"];
  "138928997278208" [label="Parameters"];
  "138928997277440" [label="Code"];
  "138928997277440" -> "138928997276768";
  "138928997277440" -> "138928997227904";
  "138928997277440" -> "138928997226176";
  "138928997277440" -> "138928997223248";
  "138928997277440" -> "138928997229248";
  "138928997276768" [label="Declaration"];
  "138928997276768" -> "138928997280704";
  "138928997276768" -> "138928997282864";
  "138928997276768" -> "138928997273936";
  "138928997280704" [label="k"];
  "138928997282864" [label="ARRAY"];
  "138928997282864" -> "138928997269760";
  "138928997269760" [label="2"];
  "138928997273936" [label="InitList"];
  "138928997273936" -> "138928997274080";
  "138928997273936" -> "138928997227760";
  "138928997274080" [label="1"];
  "138928997227760" [label="2"];
  "138928997227904" [label="Declaration"];
  "138928997227904" -> "138928997226512";
  "138928997227904" -> "138928997226224";
  "138928997227904" -> "138928997224304";
  "138928997226512" [label="s"];
  "138928997226224" [label="ARRAY"];
  "138928997226224" -> "138928997226368";
  "138928997226368" [label="2"];
  "138928997224304" [label="InitList"];
  "138928997224304" -> "138928997222096";
  "138928997224304" -> "138928997227808";
  "138928997222096" [label="3"];
  "138928997227808" [label="4"];
  "138928997226176" [label="Declaration"];
  "138928997226176" -> "138928997226992";
  "138928997226176" -> "138928997227184";
  "138928997226992" [label="a"];
  "138928997227184" [label="Expr"];
  "138928997227184" -> "138928997222192";
  "138928997227184" -> "138928997222960";
  "138928997227184" -> "138928997226032";
  "138928997222192" [label="Expr"];
  "138928997222192" -> "138928997226416";
  "138928997222192" -> "138928997221856";
  "138928997226416" [label="Dereference"];
  "138928997226416" -> "138928997224448";
  "138928997224448" [label="s"];
  "138928997221856" [label="ARRAY"];
  "138928997221856" -> "138928997222864";
  "138928997222864" [label="2"];
  "138928997222960" [label="+"];
  "138928997226032" [label="Expr"];
  "138928997226032" -> "138928997225504";
  "138928997226032" -> "138928997225024";
  "138928997225504" [label="Dereference"];
  "138928997225504" -> "138928997225120";
  "138928997225120" [label="k"];
  "138928997225024" [label="ARRAY"];
  "138928997225024" -> "138928997224064";
  "138928997224064" [label="2"];
  "138928997223248" [label="Declaration"];
  "138928997223248" -> "138928997222000";
  "138928997223248" -> "138928997220512";
  "138928997222000" [label="b"];
  "138928997220512" [label="Conversion"];
  "138928997220512" -> "138928997232128";
  "138928997220512" -> "138928997223296";
  "138928997232128" [label="Type"];
  "138928997232128" -> "138928997221712";
  "138928997232128" -> "138928997226320";
  "138928997221712" [label="INT"];
  "138928997226320" [label="*"];
  "138928997223296" [label="Expr"];
  "138928997223296" -> "138928997230016";
  "138928997223296" -> "138928997224928";
  "138928997223296" -> "138928997227616";
  "138928997230016" [label="Dereference"];
  "138928997230016" -> "138928997221664";
  "138928997221664" [label="s"];
  "138928997224928" [label="+"];
  "138928997227616" [label="Dereference"];
  "138928997227616" -> "138928997229632";
  "138928997229632" [label="k"];
  "138928997229248" [label="Return"];
  "138928997229248" -> "138928997221424";
  "138928997221424" [label="0"];
}
